--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 <body>
     <div class="container">
          <h1>Dice simulator</h1>
-        <div class="dice" id="dice">&#9860</div>
+        <div class="dice" id="dice">&#9861</div>
         <button id="dice-roll">Roll it!</button>
         <h2>Roll History</h2>
         <ul id="roll-history">
-            <li><span>&#9860</span></li>
+            <li><span></span></li>
         </ul>
+        <footer>Practice project made by Anusha Sohail</footer>
     </div>
     <script src="script.js"></script>
 </body>
